# MonkeyManager

./: .flake8  .gitignore  .pycodestyle  CHANGELOG.md  Makefile  Pipfile  README.md  __init__.py  monkey.py  pyproject.toml  pyrightconfig.json  requirements.txt  source.py  tatus  ui.py
models/: __init__.py  db_engine.py  query_builder.py
sample_db/: sample.db
services/: __init__.py  animation.py  db_dump.py  encrypt.py  fonts.py  search.py  storage.py
styles/: qframe_css.py  qlabel_css.py  qwidget_css.py
tools/: __init__.py  encrypt.py
widgets/: __init__.py  menu_button.py  new_key.py  new_key_qframe.py
widgets/ui/: __init__.py  menu_button.py
